[bug fix] panel's area overlapped

--- a/src/main/webapp/styles/custom/layout.css
+++ b/src/main/webapp/styles/custom/layout.css
@@ -34,6 +34,10 @@
 	margin-left: 50px;
 }
 
+.each-fragment-container {
+	overflow-x: scroll;
+}
+
 #sidebar {
 	width: 18%;
 	float: right;
@@ -120,9 +124,9 @@
 .fragment-menu {
 	display: none;
 	float: right;
-	overflow: visible;
-	position: relative;
-	top: -15px;
+/* 	overflow: visible; */
+/* 	position: relative; */
+/* 	top: -15px; */
 }
 
 .warning-color {
